# coap

./: AUTHORS  Makefile.am  README  configure-defaults  configure.ac
doc/: coap.dia
include/coap/: coap.h  parse.h  uri.h
m4/: coap_check_cflags.m4  coap_check_ldflags.m4  coap_warnings.m4
src/client/: main.c
src/coap/: coap.c
src/parse/: parse.c
src/ping/: main.c
src/server/: main.c
src/uri/: uri.c
